# CeleganControlSystem

./: README.md
Sources/: CMakeLists.txt  ReadMe.md
Sources/code/: CMakeLists.txt
Sources/code/Common/: CMakeLists.txt
Sources/code/Common/inc/: Parameters.h  commonAlgorithm.h  const_def.h
Sources/code/Common/src/: Parameters.cpp  commonAlgorithm.cpp
Sources/code/HardwareControl/: CMakeLists.txt
Sources/code/HardwareControl/inc/: hello.h
Sources/code/HardwareControl/inc/Camera/: CameraBase.h  CameraMoment.h
Sources/code/HardwareControl/inc/Stage/: StageBase.h  StagePws.h
Sources/code/HardwareControl/src/: hello.cpp
Sources/code/HardwareControl/src/Camera/: CameraBase.cpp  CameraMoment.cpp
Sources/code/HardwareControl/src/Stage/: StageBase.cpp  StagePws.cpp
Sources/code/PictureProcess/: CMakeLists.txt
Sources/code/PictureProcess/inc/: NematodeProcess.h  picInfo.h
Sources/code/PictureProcess/src/: NematodeProcess.cpp  picInfo.cpp
Sources/code/StarkLoco/: CMakeLists.txt  main.cpp  systemInterface.cpp  systemInterface.h  systemInterface.ui
Sources/code/SystemUI/: CMakeLists.txt
Sources/code/SystemUI/inc/: Experiment.h
Sources/code/SystemUI/src/: Experiment.cpp
Sources/data/: PanelParameters.ini
